Adding JaCoCo plugin and updating integration test